--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
 
 title: Rakesh Pandey 
-Dual Degree (M.tech+ Ph.D)
-Dept. of CSE, IIT Guwahati
+##Dual Degree (M.tech+ Ph.D)
+##Dept. of CSE, IIT Guwahati
