--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
 
 title: Rakesh Pandey 
-##Dual Degree (M.tech+ Ph.D)
-##Dept. of CSE, IIT Guwahati
+<h1>Dual Degree (M.tech+ Ph.D)
+<h1>Dept. of CSE, IIT Guwahati
